fix: enforce absolute positioning on carousel images to prevent grey gaps with varying aspect ratios

--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -44,7 +44,9 @@
   }
 
   &__carousel-img {
-    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
