--- a/styles/main.css
+++ b/styles/main.css
@@ -342,7 +342,9 @@
   background-color: #111;
 }
 .services__carousel-img {
-  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
